// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`default setup 1`] = `
Object {
  "Resources": Object {
    "FooDFE0DD70": Object {
      "DeletionPolicy": "Retain",
      "Type": "AWS::S3::Bucket",
      "UpdateReplacePolicy": "Retain",
    },
  },
}
`;

exports[`multiple resources 1`] = `
Object {
  "Resources": Object {
    "BarA6AB415C": Object {
      "DeletionPolicy": "Retain",
      "Type": "AWS::S3::Bucket",
      "UpdateReplacePolicy": "Retain",
    },
    "FooDFE0DD70": Object {
      "DeletionPolicy": "Retain",
      "Type": "AWS::S3::Bucket",
      "UpdateReplacePolicy": "Retain",
    },
  },
}
`;

exports[`propertyMatchers 1`] = `
Object {
  "Resources": Object {
    "RandomF1C596BC": Object {
      "DeletionPolicy": "Retain",
      "Properties": Object {
        "BucketName": Any<String>,
        "WebsiteConfiguration": Object {
          "IndexDocument": "test.html",
        },
      },
      "Type": "AWS::S3::Bucket",
      "UpdateReplacePolicy": "Retain",
    },
  },
}
`;

exports[`subsetResourceKeys 1`] = `
Object {
  "Resources": Object {
    "TopicBFC7AF6E": Object {
      "Type": "AWS::SNS::Topic",
    },
  },
}
`;

exports[`subsetResourceTypes 1`] = `
Object {
  "Resources": Object {
    "TopicBFC7AF6E": Object {
      "Type": "AWS::SNS::Topic",
    },
  },
}
`;

exports[`yaml setup 1`] = `
"Resources:
  FooDFE0DD70:
    Type: 'AWS::S3::Bucket'
    UpdateReplacePolicy: Retain
    DeletionPolicy: Retain
"
`;
